# play-with-neo4j

./: README.md  config  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
app/repositories/: base_graph.py  graph.py  neo4j_graph.py
app/services/: service.py
app/utils/: config.py
