[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["meesa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
neo4j = "^5.23.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
